# vdom

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  dev-requirements.txt  noxfile.py  postBuild  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
docs/: design-patterns.md  event-spec.md  mimetype-spec.md  spec.md
example-notebooks/: README.md  custom-progress-bars.ipynb  emoji-game.ipynb  exploring-elements.ipynb  other-sparklines.ipynb  sparkline-divs.ipynb  sparklines-svg-computing.ipynb
schemas/: vdom_schema_v0.json
vdom/: __init__.py  _version.py  core.py  frozendict.py  helpers.py  logos.py  svg.py
vdom/schemas/: vdom_schema_v1.json
vdom/tests/: test_core.py  test_frozen.py
