[metadata]
name = vdom
author = nteract contributors
author_email = jupyter@googlegroups.com
license = BSD
description = VDOM for Python
keywords = vdom,, html
url = https://github.com/nteract/vdom
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = vdom
install_requires = ipython; jsonschema
include_package_data = True

[options.extras_require]
tests = pytest
all = pytest

[options.package_data]
vdom = schemas/vdom_schema_v0.json

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Note: there cannot be spaces after comma's here
exclude = __init__.py
ignore =
    # Length of line
    E501,
    # Extra space in brackets
    E20,
    # Multiple spaces around ","
    E231,E241,
    # Comments
    E26,
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731
max-line-length = 120

[versioneer]
VCS = git
style = pep440
versionfile_source = vdom/_version.py
versionfile_build = vdom/_version.py
tag_prefix =
parentdir_prefix = vdom-
